--- a/cn.zh-CN/用户指南/系统设置/工作组管理/管理工作组.md
+++ b/cn.zh-CN/用户指南/系统设置/工作组管理/管理工作组.md
@@ -41,7 +41,7 @@
 成员管理 
 -------------------------
 
-通过成员管理功能，对工作组实现账号和角色权限控制。具体操作请参见[成员管理](/cn.zh-CN/用户指南/系统设置/工作组管理/工作组成员管理.md)。
+通过成员管理功能，对工作组实现账号和角色权限控制。具体操作请参见[云计算成员管理](/cn.zh-CN/用户指南/系统设置/工作组管理/工作组成员管理.md)。
 
 禁用/启用工作组 
 -----------------------------
@@ -62,10 +62,10 @@
 
    
 
-   |  操作   |                                                                                                                   说明                                                                                                                    |
-   |-------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-   | 禁用工作组 | 1. 在工作组列表 **操作** 中，选择目标工作组的 **更多** \> **禁用** 。   2. 在 **禁用工作组** 对话框中输入YES，单击 **确定** 。    **说明** 目标工作组 **操作** 列的 **云计算资源** 和 **成员管理** 按钮灰化，表示工作组禁用成功。 |
-   | 启用工作组 | 在工作组列表 **操作** 中，选择目标工作组的 **更多** \> **启用** 。 **说明** 目标工作组 **操作** 列的 **云计算资源** 和 **成员管理** 按钮取消灰化，表示工作组启用成功。                                                                                                               |
+   |  操作   |                                                                                                                        说明                                                                                                                        |
+   |-------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+   | 禁用工作组 | 1. 在工作组列表 **操作** 中，选择目标工作组的 **更多** \> **禁用** 。   2. 在 **禁用工作组** 对话框中输入YES，单击 **确定** 。 目标工作组 **操作** 列的 **云计算资源** 和 **成员管理** 按钮灰化，表示工作组禁用成功。    |
+   | 启用工作组 | 在工作组列表 **操作** 中，选择目标工作组的 **更多** \> **启用** 。 目标工作组 **操作** 列的 **云计算资源** 和 **成员管理** 按钮取消灰化，表示工作组启用成功。                                                                                                                               |
 
    
 
