--- a/cn.zh-CN/用户指南/系统设置/工作组管理/管理工作组.md
+++ b/cn.zh-CN/用户指南/系统设置/工作组管理/管理工作组.md
@@ -41,7 +41,7 @@
 成员管理 
 -------------------------
 
-通过成员管理功能，对工作组实现账号和角色权限控制。具体操作请参见[云计算成员管理](/cn.zh-CN/用户指南/系统设置/工作组管理/工作组成员管理.md)。
+通过成员管理功能，对工作组实现账号和角色权限控制。具体操作请参见[工作组成员管理](/cn.zh-CN/用户指南/系统设置/工作组管理/工作组成员管理.md)。
 
 禁用/启用工作组 
 -----------------------------
