--- a/cn.zh-CN/常见问题/语义建模.md
+++ b/cn.zh-CN/常见问题/语义建模.md
@@ -12,15 +12,13 @@ keyword: [语义建模, 标签, 实体, 事件, 关系]
 
 ## 对象绑定数据表是否一定需要主表，主表的作用是什么？
 
-主表是云计算资源上的数据全量表。
+主表是云计算资源上的数据全量表，不一定需要主表；当实体、关系或事件绑定多张表的时候，才需要设置数据量最全的表为主表。
 
-不一定需要主表，当实体或关系或事件绑定多张表的时候，需要设置数据量最全的表为主表。
-
-主表只对标签查询有作用，因为主标签在实体关联的每张表上都存在，这时查询会默认去查询主表的主标签数据。
+主表只对标签查询有作用。因主标签在实体关联的每张表上都存在，所以默认查询主表的主标签数据。
 
 ## 值码表支持的云计算资源有哪些？
 
-值码表是数据库相关字段编码值的含义，例如：性别字段代码表的值【M】代表 【男】，【F】代表【女】。值码表编辑方法请参见[标签编辑值码表](/cn.zh-CN/用户指南/语义建模/标签模型/查看详情/标签编辑值码表.md)。
+值码表是数据库相关字段编码值的含义，例如：性别字段代码表的值【M】代表 【男】，【F】代表【女】。值码表配置请参见[标签编辑值码表](/cn.zh-CN/用户指南/语义建模/标签模型/查看详情/标签编辑值码表.md)。
 
 值码表支持OLAP类关系型数据库，支持RDS、ADS、Oracle、SQL Server、PostgreSQL。
 
@@ -28,5 +26,9 @@ keyword: [语义建模, 标签, 实体, 事件, 关系]
 
 不支持，只可在绑表时指定。
 
-若需修改，请先解绑表，并重新绑表，指定主标签和普通标签。绑表操作请参见[绑表管理](/cn.zh-CN/用户指南/语义建模/标签模型/绑表管理.md)。
+若需修改，请先解绑表，并重新绑表后，指定主标签和普通标签。绑表操作请参见[绑表管理](/cn.zh-CN/用户指南/语义建模/标签模型/绑表管理.md)。
+
+## 标签类型为枚举值时，为什么标签无效？
+
+因没有配置标签值码表。详细请参见[标签编辑值码表](/cn.zh-CN/用户指南/语义建模/标签模型/查看详情/标签编辑值码表.md)。
 
