--- a/cn.zh-CN/常见问题/系统设置.md
+++ b/cn.zh-CN/常见问题/系统设置.md
@@ -13,7 +13,7 @@ keyword: [成员管理, 全员管理]
 
 工作组成员支持的角色：工作组管理员、工作开发者、工作组分析员。
 
-租户支持的角色：包括租户管理员、租户访客、租户数据资产管理员、租户运维人员。
+租户支持的角色：包括租户管理员、租户访客、租户数据资产管理员、租户运维人员和租户一般用户。
 
 所有的角色权限，请查看产品页面右上角**账号** \> **系统设置** \> **权限列表**。
 
@@ -24,4 +24,12 @@ keyword: [成员管理, 全员管理]
 2.单击目标工作组后面的**云计算资源** \> **新建云计算资源**，资源存储类型选择**ApsaraDB for RDS**，单击后面的**![查看](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6495121161/p228757.png)**查看白名单IP列表。
 
 ![查看IP](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6495121161/p228758.png)
+
+## 为什么添加租户成员和工作组成员按钮为置灰状态？
+
+因当前账号没有权限。请联系管理员账户（有授权功能的账户）给当前账号进行授权。
+
+在右上角单击**账号** \> **系统设置** \> **权限列表** \> **系统管理**，参考权限列表 ，给用户设置对应的权限。
+
+**说明：** ![开通标识](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7466983261/p279748.png)表示已授权，![未授权](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7466983261/p279760.png)表示未授权。
 
