--- a/cn.zh-CN/最佳实践/准备工作/新建工作组并添加成员.md
+++ b/cn.zh-CN/最佳实践/准备工作/新建工作组并添加成员.md
@@ -39,9 +39,8 @@
 
     -   **工作组管理员**：拥有工作组内的最大权限。
     -   **工作开发者**：拥有工作组内的开发（例如云计算资源更新）等基本的修改及读取权限。
-    -   **工作组分析师**：可使用工作组内的数据进行数据分析等操作。
-    -   **工作组访客**：可查看工作组内的所有信息，无创建、修改、删除类权限。
-6.  在**成员管理**列表查看添加的成员。
+    -   **工作组分析员**：可使用工作组内的数据进行数据分析等操作。
+6.  在**成员管理**列表查看添加的成员信息。
 
 7.  单击左侧导航栏中的**权限列表**，查看所有角色的权限。
 
