--- a/cn.zh-CN/最佳实践/准备工作/用户管理.md
+++ b/cn.zh-CN/最佳实践/准备工作/用户管理.md
@@ -1,8 +1,9 @@
 # 用户管理
 
-本章节介绍如何对账号添加用户角色操作。为方便管理，不同的角色，具有不同的操作权限。
+角色不同，对应的权限也不同，本章节介绍如何为账号配置租户角色。
 
-您已经[购买数据资源平台](https://common-buy.aliyun.com/?commodityCode=drp_basic_public_cn#/buy)。
+-   您已[购买数据资源平台](https://common-buy.aliyun.com/?commodityCode=drp_basic_public_cn#/buy)。
+-   您已注册阿里云账号，请参见[创建阿里云账号](/cn.zh-CN/快速入门/创建阿里云账号.md)
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
@@ -15,7 +16,7 @@
     |配置项|说明|
     |---|--|
     |人员|选择账号|
-    |角色|包括租户管理员、租户访客、租户数据资产管理员、租户运维人员。|
+    |角色|包括租户管理员、租户访客、租户数据资产管理员、租户运维人员和租户一般用户。|
 
     **说明：**
 
@@ -23,7 +24,8 @@
     -   **租户访客**：租户的读取的权限（比如读取云计算资源）。
     -   **租户资产管理员**：租户内的资产的管理人员（比如查看数据资产列表）。
     -   **租户运维人员**：租户内的运维管理。
-5.  在**用户管理**页面查看的新建的用户信息。
+    -   **租户一般用户**：租户内的普通用户，可查看赋权的模块。
+5.  在**用户管理**页面查看新添加的租户成员权限。
 
 6.  单击左侧导航栏中的**权限列表**，查看所有角色的权限。
 
