--- a/cn.zh-CN/最佳实践/数据建模/设计数据模型.md
+++ b/cn.zh-CN/最佳实践/数据建模/设计数据模型.md
@@ -2,47 +2,38 @@
 
 本章节为您介绍如何设计数据模型。
 
--   您已设计字段标准，详细请参见：[设计字段标准](/cn.zh-CN/最佳实践/数据建模/设计字段标准.md)。
--   您已经在MaxCompute创建表[stg\_base\_yhkh\_di](/cn.zh-CN/最佳实践/准备工作/准备数据.md)和[stg\_base\_xykbkjl\_di](/cn.zh-CN/最佳实践/准备工作/准备数据.md)。
+-   已设计字段标准，详细请参见：[设计字段标准](/cn.zh-CN/最佳实践/数据建模/设计字段标准.md)。
+-   已创建MaxCompute表stg\_base\_yhkh\_di和stg\_base\_xykbkjl\_di。表详细信息参见[原始数据层银行客户信息](/cn.zh-CN/最佳实践/准备工作/准备数据.md)。
 
 设计数据模型并且物理化为ETL代码数据加工做准备。
 
-## 新建数据层
+## 新建模型
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
 2.  在页面左上角单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**按钮，选择**研发工作台** \> **资产加工** \> **![数据建模](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7366900161/p208211.png)**，进入数据建模页面。
 
-3.  单击左侧导航栏**数据模型设计** \> **模型管理** \> **![新建目录](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0492067061/p190487.png)**按钮，单击**新建目录**。
+3.  单击左侧导航栏**数据模型设计**创建模型和目录。
 
-4.  弹出**新建目录**页面，填写目录名称和标识，单击**确认**。
+    1.  创建数据模型：若当前工作组下无模型，请单击**点击新建**，填写名称和标识后，单击**确认**。
 
-    新建目录配置：
+        ![创建模型](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4914143261/p283021.png)
 
-    |名称|标识|
-    |--|--|
-    |信息中心|xxzx|
+        新建模型配置：
 
-5.  单击新建的目录后**![新建目录](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0492067061/p190487.png)** \> **新建模型域**，弹出**新建模型域**页面，输入模型名称、标识信息，单击**确认**。
+        |名称|标识|
+        |--|--|
+        |我的模型|wdmx|
 
-    新建模型域配置：
+        **说明：** 首次使用数据建模功能时需要创建数据模型。
 
-    |名称|标识|
-    |--|--|
-    |信息中心|xxzx|
+    2.  创建目录：将鼠标悬浮至我的模型上，单击**![新建目录](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0492067061/p190487.png)** \> **新建目录**，在**新建目录**页面，填写目录名称和标识，单击**确认**。
 
-6.  单击新建的数据层后**![新建目录](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0492067061/p190487.png)** \> **编辑数据层**，弹出**编辑数据层**页面，输入名称、标识信息，单击**确认**。
+        新建目录配置：
 
-    编辑数据层配置：
-
-    |数据层名称|标识|
-    |-----|--|
-    |原始层模型-STG|stg|
-    |基础层模型-ODS|ods|
-    |明细层模型-DWD|dwd|
-    |汇总层模型-DWS|dws|
-
-7.  查看编辑后的数据层。
+        |名称|标识|
+        |--|--|
+        |信息中心|xxzx|
 
 
 ## 手动新建逻辑表
@@ -51,20 +42,24 @@
 
 2.  在页面左上角单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**按钮，选择**研发工作台** \> **资产加工** \> **![数据建模](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7366900161/p208211.png)**，进入数据建模页面。
 
-3.  单击左侧导航栏**数据模型设计** \> **模型管理**，单击新建的数据层后的**![新建逻辑表](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0492067061/p190487.png)** \> **新建逻辑表**。
+3.  单击创建的数据模型，将鼠标悬浮至创建的目录上后，单击**![DDL新建](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4357900161/p208640.png)** \> **新建逻辑表**。
 
-4.  弹出**新增逻辑表**页面，单击**自定义模式**，单击**是**，填写表名称、描述、生命周期，单击**引用现有表字段**，选择为**MaxCompute**下的云计算资源，选择表名，勾选表的所有字段，单击**确定**，返回到**新增逻辑表**页面，单击**确定**。
+    |数据模型名称|目录|
+    |------|--|
+    |我的模型|信息中心|
+
+4.  在**新增逻辑表**页面，填写表名称、描述、生命周期，单击**引用现有表字段**，选择为**MaxCompute**下的云计算资源，选择表名，勾选表的所有字段，单击**确定**，返回到**新增逻辑表**页面，单击**确定**。
 
     新建逻辑表配置：
 
     |表名称|所属目录|储存生命周期|逻辑表描述|引用现有表|
     |---|----|------|-----|-----|
-    |stg\_base\_yhkh\_di|原始层模型-STG|365|银行客户信息|stg\_base\_yhkh\_di|
-    |stg\_base\_xykbkjl\_di|原始层模型-STG|365|信用卡信息|stg\_base\_xykbkjl\_di|
+    |stg\_base\_yhkh\_di|信息中心|365|银行客户信息|stg\_base\_yhkh\_di|
+    |stg\_base\_xykbkjl\_di|信息中心|365|信用卡信息|stg\_base\_xykbkjl\_di|
 
-5.  单击**数据层**名称，查看新建的逻辑表。
+5.  单击**目录**名称，查看新建的逻辑表。
 
-    ![查看STG层的](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3357900161/p206921.png)
+    ![查看目录下逻辑表](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5914143261/p283099.png)
 
 
 ## DDL语句新建逻辑表
@@ -73,7 +68,13 @@
 
 2.  在页面左上角单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**按钮，选择**研发工作台** \> **资产加工** \> **![数据建模](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7366900161/p208211.png)**，进入数据建模页面。
 
-3.  单击左侧导航栏**数据模型设计** \> **模型管理**，单击新建的数据层后的**![DDL新建](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4357900161/p208640.png)** \> **列表** \> **DDL新建**，输入DDL语句，单击**确定**。
+3.  单击创建的数据模型，将鼠标悬浮至创建的目录上后，单击**![DDL新建](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4357900161/p208640.png)** \> **DDL新建**。
+
+    |数据模型名称|目录|
+    |------|--|
+    |我的模型|信息中心|
+
+4.  在**通过DDL新建**面板输入DDL语句，单击**确定**。
 
     基础层模型-ODS:ods\_base\_xykbkjl\_di\(信用卡信息\)
 
@@ -208,9 +209,7 @@
     ;
     ```
 
-4.  在**模型管理**页面对应数据层下查看新建的逻辑表。
-
-    ![查看模型](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7361429061/p204466.png)
+5.  单击**目录**名称，查看新建的逻辑表。
 
 
 ## 配置逻辑表质量规则
@@ -219,9 +218,13 @@
 
 2.  在页面左上角单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**按钮，选择**研发工作台** \> **资产加工** \> **![数据建模](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7366900161/p208211.png)**，进入数据建模页面。
 
-3.  单击左侧导航栏**数据模型设计** \> **模型管理** \> **![查看](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8361429061/p206593.png)**按钮，单击新建的”stg\_base\_yhkh\_di"逻辑表后的**详情**。
+3.  进入创建的数据模型和创建的目录中，单击新建的”stg\_base\_yhkh\_di"表。
 
-4.  弹出**逻辑表详情**页面，单击页面右上角**![编辑](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4357900161/p211431.png)**图标，选择字段关联字段标准，所有操作完成之后单击**确定**。
+    |数据模型名称|目录|
+    |------|--|
+    |我的模型|信息中心|
+
+4.  在**逻辑表详情**页面，单击页面右上角**![编辑](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4357900161/p211431.png)**图标，选择字段关联字段标准，所有操作完成之后单击**确定**。
 
     新建逻辑表编辑配置：
 
@@ -234,7 +237,7 @@
     |职业|数据元-职业|
     |教育水平|数据元-教育水平|
 
-5.  单击页面**质量规则**，选择**MaxCompute** \> **质量规则** \> **![添加](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8361429061/p204430.png)**按钮，选择分区表达式后，单击**确定**。
+5.  单击页面**质量规则**，选择**MaxCompute** \> **![添加](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8361429061/p204430.png)**按钮，选择分区表达式后，单击**确定**。
 
 6.  单击**字段规则**，单击**![启用](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8361429061/p204433.png)**按钮，启用所有字段规则。
 
@@ -249,18 +252,24 @@
 
 3.  单击左侧导航栏**数据模型设计** \> **模型管理**，单击模型域后的**![查看模型](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8361429061/p204468.png)**，进入模型域页面。
 
-4.  勾选页面所有逻辑表，单击**批量操作** \> **物理化**。
+4.  单击创建的数据模型，将鼠标悬浮至创建的目录上后，单击![DDL新建](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4357900161/p208640.png)。
 
-5.  弹出**物理化**页面，选择云计算资源类型和云计算资源，单击**执行物理化**，等待物理化结果执行成功。
+    |数据模型名称|目录|
+    |------|--|
+    |我的模型|信息中心|
 
-6.  在页面左上角单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**按钮，选择**研发工作台** \> **资产加工** \> **![数据探查](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8366900161/p208214.png)**，进入数据探查页面。
+5.  勾选页面所有逻辑表，单击**批量操作** \> **物理化**。
 
-7.  单击**数据探查** \> **物理表探查**，进入物理表探查页面。
+6.  弹出**物理化**页面，选择云计算资源类型和云计算资源，单击**执行物理化**，等待物理化结果执行成功。
 
-    1.  选中**MaxCompute**下的云计算资源，输入逻辑表表名。
+7.  在页面左上角单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**按钮，选择**研发工作台** \> **资产加工** \> **![数据探查](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8366900161/p208214.png)**，进入数据探查页面。
 
-    2.  选中逻辑表表名，查看物理表数据预览。
+8.  单击**数据探查** \> **物理表探查**，进入物理表探查页面。
 
-        ![表查看](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2266060161/p223977.png)
+    1.  选中**MaxCompute**下的云计算资源，输入物理表表名。
+
+    2.  单击物理表表名，查看物理表数据预览。
+
+        ![表查看](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5119083261/p283693.png)
 
 
