--- a/cn.zh-CN/最佳实践/数据治理/添加计算节点数据加工.md
+++ b/cn.zh-CN/最佳实践/数据治理/添加计算节点数据加工.md
@@ -2,7 +2,7 @@
 
 本章节为您介绍如何添加计算节点进行数据加工。
 
-您已经新建数据模型，详细请参见：[设计数据模型](/cn.zh-CN/最佳实践/数据治理/设计数据模型.md)。
+您已经新建数据模型，详细请参见[设计数据模型](/cn.zh-CN/最佳实践/数据治理/设计数据模型.md)。
 
 可以对逻辑表添加计算节点进行数据的加工，使数据变成符合标准的数据。
 
@@ -10,15 +10,15 @@
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
-2.  在页面左上角单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**按钮，选择**研发工作台** \> **资产加工** \> **![数据建模](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7366900161/p208211.png)**，进入数据建模页面。
+2.  在页面左上角单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**按钮，选择**研发工作台** \> **资产加工** \> **![数据开发](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7648373261/p283130.png)**，进入数据开发页面。
 
-3.  单击左侧导航栏**场景加工** \> **公共节点** \> **添加节点**。
+3.  单击左侧导航栏**公共节点** \> **添加节点**。
 
-4.  弹出**添加节点**页面，填写节点名称和code，服务类型选择为“离线服务”、计算资源类型为“MaxCompute”，作业类型为“SQL"，单击**下一步**。
+4.  将节点类型选择为**Maxcompute\_SQL**，单击**确定**。
 
-    1.  输入SQL语句。
+5.  在**添加节点**页面，输入SQL语句。
 
-        **节点"ods\_base\_yhkh\_di"**SQL语句：
+    1.  **节点"ods\_base\_yhkh\_di"**SQL语句如下：
 
         ```
         insert overwrite table ${ods_base_yhkh_di}
@@ -57,21 +57,98 @@
 
     2.  单击页面右侧**运行属性**，选择测试资源。
 
-    3.  节点输入：单击页面右侧**输入输出** \> **添加输入信息**，选择节点输入变量和数据模型，数据源类型为“Maxcompute”，在单击页面**![添加](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8561429061/p205624.png)**，选择节点输入变量和数据模型，数据源类型为“Maxcompute”。
+    3.  节点输入：单击页面右侧**参数变量** \> **添加节点输入**，填写输入code、选择数据源类型为“Maxcompute”、选择目标数据模型。
 
-    4.  节点输出：单击页面右侧**添加输出信息**，选择节点输出变量和数据模型，数据源类型为“Maxcompute”。
+    4.  节点输出：单击页面右侧**参数变量** \> **添加节点输出**，填写输出code，数据源类型为“Maxcompute”、选择目标数据模型。
 
         节点输入输出配置：
 
-        |节点名称和code|节点描述|节点输入变量和数据模型|节点输出变量和数据模型|
-        |---------|----|-----------|-----------|
+        |节点code|节点描述|节点输入变量和数据模型|节点输出变量和数据模型|
+        |------|----|-----------|-----------|
         |ods\_base\_yhkh\_di|银行客户信息|stg\_base\_yhkh\_di|ods\_base\_yhkh\_di|
 
-    5.  单击左上角**![保存](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8561429061/p205637.png)**按钮，单击**![运行](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9561429061/p205638.png)**按钮，出现运行参数页面，输入默认值和参数名一致，单击**确定**，查看运行日志。
+    5.  单击![解析](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7648373261/p283153.png)，在SQL解析页面，单击**确定**
 
-5.  单击页面**![发布代码版本](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9561429061/p205662.png)**，弹出**代码发布**页面，填写**新版本**为“1.0.0”，单击**确定**。
+    6.  单击左上角**![保存](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8561429061/p205637.png)**按钮，确认节点信息无误后，单击**确定**。
 
-6.  单击**![返回](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9561429061/p205667.png)**，页面返回到**节点管理**页面，查看新建的节点。
+    7.  单击**![运行](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9561429061/p205638.png)**按钮，弹出运行参数页面，输入默认值和参数名一致，单击**确定**，查看运行日志。
+
+6.  重复步骤4-5添加其他节点。
+
+    **节点"ods\_base\_xykbkjl\_di"**SQL语句：
+
+    ```
+    insert overwrite table ${ods_base_xykbkjl_di}
+    select
+      t1.id,
+      t1.cid,
+      t1.climit,
+      to_char(from_unixtime(t1.actdate),"yyyymmdd")  as actdate,
+      t1.channel,
+      t1.rid
+    from
+      ${stg_base_xykbkjl_di} t1
+    ```
+
+    **节点"dwd\_khzx\_khxx\_di"**SQL语句：
+
+    ```
+    insert overwrite table ${dwd_khzx_khxx_di} 
+    select id,zzhm,khmc,nl,c_xb_mc,yddh1,
+    csrq,c_jysp_mc,c_career_mc,c_hyzk_mc,
+    gz,decdbyjyje,decdbyjybs,zjzdjyrq,jtnsr,
+    dqckcy from ${ods_base_yhkh_di};
+    ```
+
+    **节点"dwd\_xykyw\_bkjl\_di"**SQL语句：
+
+    ```
+    insert overwrite table ${dwd_xykyw_bkjl_di} 
+    select
+    a.id,
+    a.cid,
+    a.climit,
+    a.actdate,
+    a.channel,
+    a.rid,
+    b.nl,
+    b.c_xb_mc,
+    b.c_jysp_mc
+    from ${ods_base_xykbkjl_di} a,${ods_base_yhkh_di} b where a.rid=b.zzhm;
+    ```
+
+    **节点"dws\_wp\_xyk\_di"**SQL语法：
+
+    ```
+    insert overwrite table ${dws_wp_xyk_di} 
+    select * from 
+    ${dwd_xykyw_bkjl_di};
+    ```
+
+    **节点"dws\_ren\_kh\_di"**SQL语法：
+
+    ```
+    insert overwrite table ${dws_ren_kh_di} 
+    select * from 
+    ${dwd_khzx_khxx_di};
+    ```
+
+    节点输入输出配置：
+
+    |节点名称和code|节点描述|节点输入变量和数据模型|节点输出变量和数据模型|
+    |---------|----|-----------|-----------|
+    |ods\_base\_xykbkjl\_di|信用卡信息|stg\_base\_xykbkjl\_di|ods\_base\_xykbkjl\_di|
+    |dwd\_khzx\_khxx\_di|银行客户信息|ods\_base\_yhkh\_di|dwd\_khzx\_khxx\_di|
+    |dwd\_xykyw\_bkjl\_di|信用卡信息|ods\_base\_yhkh\_di|dwd\_xykyw\_bkjl\_di|
+    |ods\_base\_xykbkjl\_di|
+    |dws\_wp\_xyk\_di|信用卡信息|dwd\_xykyw\_bkjl\_di|dws\_wp\_xyk\_di|
+    |dws\_ren\_kh\_di|银行客户信息|dwd\_khzx\_khxx\_di|dws\_ren\_kh\_di|
+
+7.  在公共节点目录，查看新建的节点。
+
+    ![公共节点.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5871133261/p282830.png)
+
+8.  在公共节点页面，单击待发布节点操作列的**发布**，在发布节点页面，填写新版本后，单击**确定**。
 
 
 ## 节点加工后的数据探查
@@ -80,12 +157,10 @@
 
 2.  在页面左上角单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**按钮，选择**研发工作台** \> **资产加工** \> **![数据探查](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8366900161/p208214.png)**，进入数据探查页面。
 
-3.  单击**数据探查** \> **物理表探查**，进入物理表探查页面。
+3.  单击**数据探查** \> **物理表探查** \> **MaxCompute**。
 
-    1.  选中**MaxCompute**下的云计算资源，输入加工后节点输出表表名。
+    1.  选中**MaxCompute**下的云计算资源。
 
-    2.  单击物理表**操作**列**数据预览**，查看物理表数据预览。
-
-        ![探查](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0661429061/p205927.png)
+    2.  在关键词搜索栏，输入加工后的节点输出表表名，并单击该表名，在**数据预览**页面查看物理表数据详情。
 
 
