--- a/cn.zh-CN/最佳实践/数据治理/治理后模型质量检测.md
+++ b/cn.zh-CN/最佳实践/数据治理/治理后模型质量检测.md
@@ -12,9 +12,11 @@
 
 2.  在页面左上角单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**按钮，选择**研发工作台** \> **资产加工** \> **![数据建模](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7366900161/p208211.png)**，进入数据建模页面。
 
-3.  单击左侧导航栏**数据模型设计** \> **模型管理** \> **![查看](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8361429061/p206593.png)**按钮，单击新建的”ods\_base\_yhkh\_di"逻辑表后的**详情**。
+3.  单击**数据模型设计**。
 
-4.  弹出**逻辑表详情**页面，单击页面右上角**![编辑](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8361429061/p204411.png)**按钮，单击数据字段后的**编辑**，选择关联字段标准，单击数据字段后的**确定**，所有操作完成之后单击**确定**。
+4.  展开创建的数据模型和目录上后，在目录列表下面单击”ods\_base\_yhkh\_di。
+
+5.  在**逻辑表详情**页面，单击页面右上角**![编辑](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8361429061/p204411.png)**按钮，单击数据字段后的**编辑**，选择关联字段标准，单击数据字段后的**确定**，所有操作完成之后单击**确定**。
 
     新建逻辑表编辑配置：
 
@@ -26,9 +28,11 @@
     |职业-标准字典值|数据元-职业|
     |教育水平-标准字典值|数据元-教育水平|
 
-5.  单击页面**质量规则**，选择**MaxCompute** \> **质量规则** \> **![添加](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8361429061/p204430.png)**按钮，选择分区表达式后，单击**确定**。
+6.  单击页面**质量规则**，选择**MaxCompute** \> **质量规则**。
 
-6.  单击**字段规则**，单击**![启用](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8361429061/p204433.png)**按钮，启用所有字段规则。
+7.  单击![添加](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8361429061/p204430.png)按钮，选择分区表达式后，单击**确定**。
+
+8.  单击**字段规则**，单击**![启用](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8361429061/p204433.png)**按钮，启用所有字段规则。
 
     ![质量规则查看](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8567900161/p208434.png)
 
@@ -51,11 +55,11 @@
 
 5.  在**试跑**页面，选择调度日期，操作完成后单击**试跑**。
 
-6.  在试跑成功运行页面，单击**任务详情**，跳转到**质量检查任务**页面，等待任务运行成功。
+6.  在试跑成功运行页面，单击**任务详情**，跳转到**质量检查任务**页面。
 
-7.  单击任务后的**详情**，查看质量检测详情。
+7.  在**质量检测任务**页面，选择**手动执行**，单击**查询**。
 
-    ![治理后质量检测查看](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8567900161/p208478.png)
+8.  单击任务后的**详情**，查看质量检测详情。
 
     结果分析：性别、教育水平、婚姻状况、职业在标准字典值，移动号码符合质量校验规则。
 
