--- a/cn.zh-CN/快速入门/创建阿里云账号.md
+++ b/cn.zh-CN/快速入门/创建阿里云账号.md
@@ -28,7 +28,7 @@
 
 为您介绍如何创建RAM子账号、子账号的访问密钥，以及如何给子账号授权并将其交付给其他用户使用。
 
--   如果您只需本人使用数据资源平台产品，请根据[t16174.md\#]()的操作准备好您的账号，并跳过此章节进行后续操作。
+-   如果您只需本人使用数据资源平台产品，请根据[准备阿里云账号](https://help.aliyun.com/document_detail/74246.htm)的操作准备好您的账号，并跳过此章节进行后续操作。
 -   如果您计划邀请其他用户协作使用数据资源平台，请您根据以下操作准备RAM子账号。
 
 1.  使用超级管理员角色的账号（主账号），登录[RAM控制台](https://ram.console.aliyun.com/overview)。
