--- a/cn.zh-CN/最佳实践/语义建模与画像分析/语义建模.md
+++ b/cn.zh-CN/最佳实践/语义建模与画像分析/语义建模.md
@@ -4,7 +4,7 @@
 
 1.  您已经新建工作组，详细请参见[新建工作组并添加成员](/cn.zh-CN/快速入门/新建工作组并添加成员.md)。
 2.  您已经新建计算资源，详细请参见[新建云计算资源](/cn.zh-CN/最佳实践/准备工作/新建云计算资源.md)。
-3.  您已经在MaxCompute数据库插入表[dws\_ren\_kh\_di](/cn.zh-CN/最佳实践/准备工作/准备数据.md)和[dws\_wp\_xyk\_di](/cn.zh-CN/最佳实践/准备工作/准备数据.md)。
+3.  您已经在MaxCompute数据库插入表dws\_ren\_kh\_di和dws\_wp\_xyk\_di，表数据详细请参见[MaxCompute数据库表语句](/cn.zh-CN/最佳实践/准备工作/准备数据.md)。
 
 语义建模主要为您介绍新建标签模型、加工衍生标签、标签同步和上线标签，为之后的标签资产做支撑。
 
