--- a/cn.zh-CN/最佳实践/资产运营与管理/标签资产运营与管理/申请标签资产并使用.md
+++ b/cn.zh-CN/最佳实践/资产运营与管理/标签资产运营与管理/申请标签资产并使用.md
@@ -2,11 +2,11 @@
 
 本章节为您介绍如何申请标签资产并使用。
 
-您已经对资产编目和上线，详情参见：[资产编目和上线标签](/cn.zh-CN/最佳实践/资产运营与管理/标签资产运营与管理/资产编目和上线标签.md)。
+您已经对资产编目和公开标签，详情参见：[资产编目和公开标签](/cn.zh-CN/最佳实践/资产运营与管理/标签资产运营与管理/资产编目和公开标签.md)。
 
-标签资产可授权到其他工作组进行生成API、生产衍生标签等使用。
+标签资产可授权到其他工作组供其生成API、生产衍生标签等。
 
-## 操作步骤
+## 申请标签资产
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
@@ -14,7 +14,7 @@
 
 3.  单击**标签**页签，再单击标签名称。
 
-4.  进入标签详情页面，单击**申请标签权限**，弹出标签申请页面，选择授权工作组、填写申请理由、设置使用周期，单击**提交**。
+4.  进入标签详情页面，单击**申请权限**，弹出标签申请页面，选择授权工作组、填写申请理由、设置使用周期，单击**提交**。
 
     申请标签配置如下表所示：
 
@@ -22,21 +22,47 @@
     |---|---|
     |授权工作组|营销部|
     |申请理由|消费方使用|
-    |使用周期|90|
+    |使用周期|30|
 
-    ![标签申请](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4909060161/p208709.png)
+    ![权限申请](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8406373261/p282866.png)
 
-5.  单击用户头像，在下拉列表中单击**系统设置**，在左侧菜单栏单击**我的申请**，可查看申请信息。
+    **说明：** 使用周期中的30表示可使用30天。
 
-6.  单击左侧菜单栏**我的审批**，在申批单所在行的操作列，单击**查看**，再单击**通过**，弹出**通过**页面，填写审批意见，单击**确认**。
+5.  可联系您的工作组及租户管理员审批该申请。
 
-7.  在页面左上角单击![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)，选择**研发工作台**，在顶部菜单栏单击**资产加工**。
+6.  单击用户头像，在下拉列表中单击**系统设置**，在左侧菜单栏单击**我的申请**，可查看申请状态。
 
-8.  单击左侧导航栏的![语义建模](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0867900161/p208221.png)，切换主界面左上角工作组到**营销部**。在左侧菜单栏单击**分析引擎** \> **查询调试**，选择云计算资源，查看对应的实体和申请标签。
+7.  当审批通过后，在我的资产查看授权成功的标签资产，详细请参见[我已申请并可用的资产](/cn.zh-CN/用户指南/我的资产/我已申请并可用的资产.md)。
+
+
+## 审批标签资产
+
+工作组及租户管理员可审批该工作组的标签资产。
+
+1.  工作组及租户管理员账号登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
+
+2.  单击用户头像，在下拉列表中单击**系统设置**。
+
+3.  在左侧导航栏，单击**我的审批**。
+
+4.  在申批单所在行的操作列，单击**查看**，再单击**通过**，弹出**通过**页面，填写审批意见，单击**确认**。
+
+5.  审批完成后，单击**已审批**页签，可查看审批信息。
+
+
+## 使用标签资产
+
+将申请到的标签资产生成API。
+
+1.  租户管理员账号登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
+
+2.  在页面左上角单击![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)，选择**研发工作台**，在顶部菜单栏单击**资产加工**。
+
+3.  单击左侧导航栏的![语义建模](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0867900161/p208221.png)，切换主界面左上角工作组到**营销部**。在左侧菜单栏单击**分析引擎** \> **查询调试**，选择云计算资源，查看对应的实体和申请标签。
 
     ![查看申请的标签](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4909060161/p208707.png)
 
-9.  可进行生成API操作。
+4.  将该标签生成API。
 
     1.  输入以下TQL语句：
 
@@ -59,6 +85,8 @@
 
     4.  单击左侧菜单栏**分析引擎** \> **API列表**，可查看新建的API。
 
-    5.  单击新建API后的**发布**，弹出**版本管理**页面，选择操作，单击**确认**，出现**发布版本成功**提示。
+    5.  单击新建API后的**发布**，弹出**版本管理**页面，开启发布版本后，单击**确认**，提示**发布版本成功**。
+
+        ![发布](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9406373261/p282974.png)
 
 
