--- a/cn.zh-CN/产品简介/功能特性/研发工作台/数据同步.md
+++ b/cn.zh-CN/产品简介/功能特性/研发工作台/数据同步.md
@@ -1,6 +1,6 @@
 # 数据同步
 
-包括:数据源管理、数据模板管理、离线数据同步、实时数据同步。
+通过配置使多种类型源端与目标端及运行同步任务，高效实现离线与实时数据一站式上云。
 
 ## 数据源管理
 
@@ -10,7 +10,7 @@
 
 ## 数据模板管理
 
-支持等数据模板创建、编辑、删除、查询等操作。
+支持数据模板创建、编辑、删除、查询等操作。
 
 ## 离线数据同步
 
