--- a/cn.zh-CN/产品简介/功能特性/研发工作台/统一服务.md
+++ b/cn.zh-CN/产品简介/功能特性/研发工作台/统一服务.md
@@ -1,24 +1,24 @@
 # 统一服务
 
-包括：API管理、服务报表、实时监控。
+是一款数据中台建设过程中的数据服务化产品，面向数据开发者支持覆盖各个加工阶段统一体验的、便捷的数据查询转服务、服务管理、服务运维能力；面向数据资产管理者支持服务的统计分析、服务用量统计分析、热门数据统计分析能力，实现数据中台建设后半场“数据应用”的有效落地，支撑数据智能应用的高效开发。
 
 ## API管理
 
--   **API资源:**API资源支持对生成的API统一管理。主要分为API的封装和API的生命周期管理。 API封装：API资源支持对生成的API统一管理。支持API的创建、编辑和调试，支持的API类型包括实时查询类等。API资源支持创建数据API、三方API和上报API。
+-   **API资源：**API资源提供对生成的API统一管理，包括API的封装和API的生命周期管理。API封装：支持API的创建、编辑和调试，支持的API类型包括实时查询类、离线批量类、流式数据类、非结构化数据类等。 API的生命周期管理：支持对数据API、三方API和上报API发布到资产运营，供其他账号申请和调用；通过下架API，可暂停其他账号对该API的申请使用。API资源支持创建数据API、三方API和上报API。
     -   表转API：指将数据库中的表通过向导模式和SQL模式配置生成API，方便开发者申请使用和调用。
         -   SQL模式下：支持自定义SQL语句定义变量和调试功能。包含API基础信息、API参数配置、API测试、返回内容和流量控制5个步骤。
-        -   向导模式下：支持界面化配置API和调试功能。包含API基础信息、API参数配置、API测试、返回内容和流量控制5个步骤。若选购了区块链服务的版本，在API测试环节可以对API返回数据的安全策略进行配置。
+        -   向导模式下：支持界面化配置API和调试功能。包含API基础信息、API参数配置、API测试、返回内容和流量控制5个步骤。
     -   三方API：通过注册API提供商URL、ContentType、请求方式等参数生成API，方便开发者申请和调用。
     -   上报API：通过创建数据表的方式生成API，方便开发者申请和调用。
--   **上架API管理:**对已上线的数据API、三方API和上报API进行上架、下架及日志查看的操作。
--   **已获授权API:**支持对已获其他账号授权的API管理。支持对已获授权API搜索、查看授权详情、我的评价等操作。其中查看的授权详情里面的访问域名、访问路径、APPKEY和APPsecret是外部调用的必要信息。
--   **已对外授权API:**支持对其他账号授权成功的API列表管理。支持已对外授权API搜索、查看、暂停授权等操作。
+-   **上架API管理：**对已上线的数据API、三方API和上报API进行上架、下架及日志查看的操作。
+-   **已获授权API：**支持对已获其他账号授权的API管理。支持对已获授权API搜索、查看授权详情、我的评价等操作。其中查看的授权详情里面的访问域名、访问路径、APPKEY和APPsecret是外部调用的必要信息。
+-   **已对外授权API：**支持对其他账号授权成功的API列表管理。支持已对外授权API搜索、查看、暂停授权等操作。
 
 ## 服务报表
 
--   **API评分统计:**支持对API的综合评分、响应速度评分、服务效率评分、产品质量评分查看，可查看API评分排行、评分统计雷达图和占比图。
--   **服务调用汇总:**支持查看API的调用汇总信息，可查看API的调用明细和调用趋势。
--   **服务调用明细:**支持查看API的调用明细信息，可查看失败原因和请求参数。
+-   **API评分统计：**支持对API的综合评分、响应速度评分、服务效率评分、产品质量评分查看，可查看API评分排行、评分统计雷达图和占比图。
+-   **服务调用汇总：**支持查看API的调用汇总信息，可查看API的调用明细和调用趋势。
+-   **服务调用明细：**支持查看API的调用明细信息，可查看失败原因和请求参数。
 
 ## 实时监控
 
