--- a/cn.zh-CN/产品简介/使用限制.md
+++ b/cn.zh-CN/产品简介/使用限制.md
@@ -14,7 +14,7 @@
 
 -   目前系统支持的任务链路：
 
-    ![数据同步链路](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4347160161/p224532.png)
+    ![离线链路架构图.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/1405373261/p282237.png)
 
     **说明：**
 
@@ -24,10 +24,14 @@
 
     ![数据链路批量图.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4347160161/p224533.png)
 
+    **说明：**
+
+    “√”代表支持，其他则为不支持。
+
 
 ## 数据探查
 
-系统目前支持MaxCompute、RDS、Hive。
+系统目前支持MaxCompute、RDS。
 
 ## 物理化
 
