--- a/cn.zh-CN/产品简介/功能特性/研发工作台/数据标准.md
+++ b/cn.zh-CN/产品简介/功能特性/研发工作台/数据标准.md
@@ -22,3 +22,8 @@
 -   **业务域：**对数据模型来源于哪些系统信息进行创建、管理。
 -   **数据域：**提供对数据域的定义与管理，供逻辑表设计时进行使用。
 
+## 通用设置
+
+-   **表属性：**对逻辑表的属性进行配置、管理。
+-   **数据元属性：**对数据元的属性进行配置、管理。
+
