--- a/cn.zh-CN/产品简介/功能特性/系统设置.md
+++ b/cn.zh-CN/产品简介/功能特性/系统设置.md
@@ -18,9 +18,17 @@
 
 ## 我的申请
 
-提供查看到账号申请使用的标签、API信息；通过筛选审批状态，对提交的申请进行查看详情和撤回申请操作，并支持申请单详情查看的功能。
+支持申请人查看自己已提交的标签、API申请单，并提供按审批状态筛选申请信息和撤回申请等功能。
 
 ## 我的审批
 
-提供工作组可以查看到其他账号申请的标签、API的使用的审批操作，对申请的内容进行查看、通过和拒绝操作，并支持未审批、已审批查看审批单详情查看。
+支持审批人审批标签、API的申请，并提供对审批单的查看、通过、拒绝等功能。
+
+## 应用管理
+
+支持对API的应用创建和管理，并提供按应用获取密钥、访问路径信息供第三方调用已获得授权API。
+
+## 组织管理
+
+组织管理员负责API审批，管理组织下的用户，组织用户角色包含组织机构管理员和租户一般用户。
 
