--- a/cn.zh-CN/最佳实践/数据治理/治理前模型质量检测.md
+++ b/cn.zh-CN/最佳实践/数据治理/治理前模型质量检测.md
@@ -11,9 +11,9 @@
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
-2.  在页面左上角单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**按钮，选择**研发工作台** \> **质量评估** \> **质量检查计划** \> **新建计划**。
+2.  在页面左上角单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**按钮，选择**研发工作台** \> **质量评估** \> **质量检查计划**。
 
-3.  弹出**新建计划**页面，输入计划名称和code，选择云计算资源、逻辑表、执行周期、生效日期和具体时间，单击**创建计划**。
+3.  单击**新建计划**，在**新建计划**页面，输入计划名称和code，选择数据源类型和云计算资源、逻辑表、执行周期、生效日期和具体时间，单击**创建计划**。
 
     新建计划配置：
 
@@ -23,11 +23,13 @@
 
 4.  在**质量检查计划**页面查看新建的计划，单击计划后的**试跑**。
 
-5.  弹出**试跑**页面，选择调度日期，操作完成后单击**试跑**。
+5.  在**试跑**页面，选择调度日期，操作完成后单击**试跑**。
 
-6.  在试跑成功运行页面，单击**任务详情**，跳转到**质量检查任务**页面，等待任务运行完成。
+6.  在试跑成功运行页面，单击**任务详情**，跳转到**质量检查任务**页面。
 
-7.  单击任务后的**详情**，查看质量检测详情。
+7.  在**质量检测任务**页面，选择**手动执行**，单击**查询**。
+
+8.  单击任务后的**详情**，查看质量检测详情。
 
     结果分析：性别、教育水平、婚姻状况、职业不在标准字典值、手机号码质量校验函数不符合规则，STG层-ODS需要做标准化动作，详细操作见[添加计算节点数据加工](/cn.zh-CN/最佳实践/数据治理/添加计算节点数据加工.md)。
 
