--- a/cn.zh-CN/用户指南/任务运维/数据同步任务/实时同步实例.md
+++ b/cn.zh-CN/用户指南/任务运维/数据同步任务/实时同步实例.md
@@ -10,7 +10,7 @@
 
 3.  在顶部菜单栏，单击**任务运维**。
 
-4.  左侧导航栏，单击**数据同步任务** \> **实时同步任务**，根据实际需求，搜索并查看上线实时同步任务的运行情况。
+4.  左侧导航栏，单击**数据同步任务** \> **实时同步实例**，根据实际需求，搜索并查看上线实时同步任务的运行情况。
 
 5.  在实时任务监控页面，单击**详情**，对实例属性信息与运行日志、接入数据量趋势图等进行查看。
 
