--- a/cn.zh-CN/用户指南/任务运维/数据同步任务/离线同步实例.md
+++ b/cn.zh-CN/用户指南/任务运维/数据同步任务/离线同步实例.md
@@ -10,7 +10,7 @@
 
 3.  在顶部菜单栏，单击**任务运维**。
 
-4.  左侧导航栏，单击**数据同步任务** \> **离线同步任务**，根据实际需求搜索，并查看上线周期同步任务的运行情况。
+4.  左侧导航栏，单击**数据同步任务** \> **离线同步实例**，根据实际需求搜索，并查看上线周期同步任务的运行情况。
 
     ![离线同步实例](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7750080261/p269934.png)
 
