--- a/cn.zh-CN/用户指南/数据资产中心/画像分析/标签圈群/标签展示设置.md
+++ b/cn.zh-CN/用户指南/数据资产中心/画像分析/标签圈群/标签展示设置.md
@@ -14,7 +14,7 @@
 
 4.  进入**圈选条件**页面，完成圈选条件设置，并生成圈选结果，详细操作请参见[圈选条件](/cn.zh-CN/用户指南/数据资产中心/画像分析/标签圈群/圈选条件.md)。
 
-5.  在**群选结果**页面，单击**展示设置**，在弹出的**结果展示设置**页面，根据需求选中需要展现的标签后，单击**确定**。
+5.  在**圈选结果**页面，单击**展示设置**，在弹出的**结果展示设置**面板中，根据需求选中需要展现的标签后，单击**确定**。
 
     ![展现标签](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7517160161/p212030.png)
 
