--- a/cn.zh-CN/用户指南/数据资产中心/概览.md
+++ b/cn.zh-CN/用户指南/数据资产中心/概览.md
@@ -15,6 +15,6 @@
     -   **搜索：**选择数据表、标签，在资产搜索中输入关键词，单击**![查询.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5537899061/p203945.png)图标**，进入资产目录展示相应的数据表、标签、API。
     -   **概要统计：**
         -   资产总量（GB）、今日新增（MB）的统计，近7日资产总量新增趋势图展示。
-        -   资产类型统计：数据数据表或标签的更新排行等信息。
-        -   选择数据数据表或标签，也可分别对近7日数据表资产总量新增趋势图进行展示。
+        -   资产类型统计：数据表、标签、API的更新排行等信息。
+        -   选择数据表、标签或者API，也可分别对近7日数据表资产总量新增趋势图进行展示。
 
