--- a/cn.zh-CN/用户指南/数据资产中心/资产目录/数据表.md
+++ b/cn.zh-CN/用户指南/数据资产中心/资产目录/数据表.md
@@ -18,9 +18,9 @@
 
     -   单击**字段信息**，显示分区及非分区字段信息。
 
-        ![表详情](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8827160161/p211883.png)
+        ![资产目录](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3188273261/p283521.png)
 
     -   单击**数据预览**，显示数据表详细内容信息。
-    -   单击**血缘关联**，显示标及字段血缘信息。
-    -   单击**详细描述**，显示数据表详细描述信息。
+    -   单击**血缘关联**，显示标准字段血缘信息。
+    -   单击**详细说明**，显示数据表详细描述信息。
 
