--- a/cn.zh-CN/用户指南/数据建模/目录管理.md
+++ b/cn.zh-CN/用户指南/数据建模/目录管理.md
@@ -4,23 +4,36 @@
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
-2.  在左侧选择**研发工作台**，在顶部菜单栏单击**资产加工**，左侧导航栏选择**![数据建模.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4960303261/p268674.png)数据建模** \> **数据模型设计** \> **模型管理**。
+2.  在页面左上角，单击![工作台](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4682213261/p280916.png)图标，选择**研发工作台**。
 
-3.  在模型管理区域， 单击**![新建目录](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0492067061/p190487.png)** \> **新建目录**。`%;`
+3.  在顶部菜单栏，选择**资产加工**。
 
-    ![目录管理](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0332303261/p271863.png)
+4.  左侧导航栏，选择**![数据建模.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4960303261/p268674.png)数据建模** \> **数据模型设计**。
 
-4.  在新建目录页面， 输入名称、标识、描述，操作完成后单击**确认**。
+5.  在模型名称区域， 单击**![新建目录](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0492067061/p190487.png)** \> **新建目录**。
+
+    ![新建目录](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8721043261/p283174.png)
+
+6.  在新建目录对话框， 输入名称、标识、描述，操作完成后单击**确认**。
 
     ![新建目录.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8721043261/p209138.png)
 
-5.  目录新建完成后，选择目录：
+7.  根据实际需要创建多个目录，目录创建完成后，如下所示，当需要修改某个目录的名称或者删除某个目录时，选择需要的目录：
 
-    -   单击**编辑**可以对目录名称、标识、描述进行编辑，操作完成后单击**确认**。
-    -   单击**删除**，出现删除提醒，操作完成后单击**知道了**。
+    ![创建完目录](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8721043261/p283176.png)
+
+    -   单击**![设置](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9721043261/p283189.png)** \> **编辑目录**，在**编辑目录**对话框，可以对目录名称和描述进行编辑，操作完成后单击**确认**。
+
+        ![编辑目录](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9721043261/p283182.png)
+
+        ![修改目录](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9721043261/p283191.png)
+
+    -   单击**![设置](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9721043261/p283189.png)** \> **删除目录**，出现删除提醒，操作完成后单击**知道了**。
+
+        ![删除](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8081043261/p283193.png)
 
         **说明：**
 
-        有下级或有模型的目录不能被删除。
+        有子节点的目录不能被删除。
 
 
