--- a/cn.zh-CN/用户指南/数据开发/测试场景/系统节点配置说明/依赖节点.md
+++ b/cn.zh-CN/用户指南/数据开发/测试场景/系统节点配置说明/依赖节点.md
@@ -1,6 +1,6 @@
 # 依赖节点
 
-在场景运行开始时，可以设置节点的依赖节点。
+当计算节点的运行依赖某些其他节点时，系统支持在场景运行开始时，设置节点的依赖节点。
 
 ## 依赖节点配置
 
@@ -12,5 +12,6 @@
 -   自定义节点：可选择依赖所属工作区下的自定义节点。 |
 |**场景节点依赖：**-   依赖所属工作区：可选择依赖所属工作区。
 -   场景名称：可选择所依赖的场景。
--   自定义节点：可选择依赖节点。 |
+-   场景节点名称：可选择依赖节点。 |
+|**依赖所属工作区**|选择跨工作区节点的依赖。|
 
