--- a/cn.zh-CN/快速入门/创建阿里云账号.md
+++ b/cn.zh-CN/快速入门/创建阿里云账号.md
@@ -1,19 +1,19 @@
 # 创建阿里云账号
 
-本文将为您介绍如何创建阿里云账号。
+本文将为您介绍如何创建注册阿里云账号、实名认证阿里云账号、创建RAM子账号以及获取AccessKey。
 
 ## 注册阿里云账号
 
-阿里云数据资源平台账号登录体系与阿里云保持一致，统一采用[RAM](https://help.aliyun.com/document_detail/28627.html)主子账号登录的方式。
+数据资源平台账号登录体系与阿里云保持一致，统一采用[RAM](https://help.aliyun.com/document_detail/28627.html)主账号或子账号登录的方式。
 
 -   阿里云账号（即主账号）是阿里云资源的归属及使用计量计费的基本主体，负责生成本企业组织下的子账号，并对子账号进行管理、授权等操作。
 -   子账号由主账号在RAM系统中创建并进行管理，其本身不拥有资源，也没有独立的计量计费，子账号由所属主账号统一控制和付费。
 
 综上所述，使用阿里云数据资源平台前，您需要准备一个阿里云账号，并通过RAM管理子账号。
 
-如果您还没有注册过阿里云账号，请进入[阿里云官网](https://www.aliyun.com/)，单击**立即注册**，即可进入阿里云账号注册页面创建阿里云账号。
+如果您还没有注册过阿里云账号，请进入[阿里云官网](https://www.aliyun.com/)，单击**立即注册**，进入阿里云账号注册页面创建阿里云账号。
 
-**说明：** 主账号作为阿里云系统识别的资源消费账号，拥有非常高的权限。请您确保账号和密码的安全，切勿借给其他人员使用，并定期更新密码。
+**说明：** 主账号作为阿里云系统识别的资源消费账号，拥有非常高的权限。请您确保账号和密码的安全，切勿借给其他人员使用，并建议定期更新密码。
 
 ## 阿里云账号实名认证
 
@@ -30,6 +30,8 @@
 
 -   如果您只需本人使用数据资源平台产品，请根据[准备阿里云账号](https://help.aliyun.com/document_detail/74246.htm)的操作准备好您的账号，并跳过此章节进行后续操作。
 -   如果您计划邀请其他用户协作使用数据资源平台，请您根据以下操作准备RAM子账号。
+
+**操作步骤：**
 
 1.  使用超级管理员角色的账号（主账号），登录[RAM控制台](https://ram.console.aliyun.com/overview)。
 
@@ -56,6 +58,8 @@
 **说明：** RAM用户创建完成后，务必保存用户名和登录密码，并将其告知子账号。
 
 ## 配置AccessKey
+
+**操作步骤：**
 
 1.  使用主账号，登录[阿里云控制台](https://homenew.console.aliyun.com/)。
 
