--- a/cn.zh-CN/快速入门/入门概述.md
+++ b/cn.zh-CN/快速入门/入门概述.md
@@ -1,17 +1,18 @@
 # 入门概述
 
-本章节以MaxCompute数据源为例，为您介绍如何使用数据资源平台快速进行金融数据的接入、治理、语义建模、圈群流程。
+本文为您介绍如何基于数据资源平台快速进行数据的接入、治理、语义化建模、标签圈群流程，帮助用户快速的将数据资源平台使用起来。
 
 ## 快速入门流程图
 
-数据资源平台的基本工作流程如流程图所示，快速入门在此基础上，为您展示数据资源平台的工作流程，具体对应关系如下：
+数据资源平台的基本工作流程如流程图：
 
-![快速入门流程](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6979000161/p207761.png)
+![快速入门步骤.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3538054261/p286888.png)
 
-1.  准备工作：[准备工作](/cn.zh-CN/快速入门/准备工作.md)。
-2.  工作组准备：[新建工作组并添加成员](/cn.zh-CN/快速入门/新建工作组并添加成员.md)。
-3.  接入数据源： [新建MaxCompute云计算资源](/cn.zh-CN/快速入门/新建MaxCompute云计算资源.md)。
-4.  数据处理：[数据处理]()。
-5.  新建标签模型：[新建标签模型](/cn.zh-CN/快速入门/新建标签模型.md)。
-6.  标签圈群：[标签圈群](/cn.zh-CN/快速入门/标签圈群.md)。
+-   **准备工作：**购买数据资源平台并登录系统，具体详见：[准备工作]()。
+-   **工作组准备：**在系统设置中创建工作组，并设置相应的角色，具体详见:[新建工作组并添加成员]()。
+-   **接入数据源：**在系统设置中相应的工作组下配置MaxCompute数据源，具体详见:[新建MaxCompute云计算资源]()。
+-   **设计数据模型：**在数据建模生成ods\_base\_yhkh逻辑表，并物理化到数据库，具体详见:[设计数据模型]()。
+-   **数据处理：**通过ETL代码将已准备好的数据插入银行客户信息表，具体详见:[数据处理](/cn.zh-CN/快速入门/添加处理节点.md)。
+-   **新建标签模型：**在语义建模中新建银行客户实体，并绑定银行客户信息表，生成主标签与普通标签，具体详见：[新建标签模型](/cn.zh-CN/快速入门/新建标签模型.md)。
+-   **标签圈群：**在画像分析中，对年龄，工资，婚姻状况-标准值说明这些标签进行圈选生成高潜办卡客户群体，具体详见：[标签圈群](/cn.zh-CN/快速入门/标签圈群.md)。
 
