--- a/cn.zh-CN/快速入门/添加处理节点.md
+++ b/cn.zh-CN/快速入门/添加处理节点.md
@@ -1,10 +1,9 @@
 # 添加处理节点
 
-本章节为您介绍如何添加数据处理节点。
+本文为您介绍用在数据开发中对ods\_base\_yhkh表进行ETL处理生成数据，供后续语义建模功能中创建标签使用。
 
-1.  您已经新建工作组，详细请参见[新建工作组并添加成员](/cn.zh-CN/快速入门/新建工作组并添加成员.md)。
-2.  您已经新建计算资源，详细请参见[新建MaxCompute云计算资源](/cn.zh-CN/快速入门/新建MaxCompute云计算资源.md)。
-3.  您已经在MaxCompute数据库插入表，详细请参见[初始化语句](/cn.zh-CN/快速入门/准备工作.md)。
+1.  您已经新建工作组，详细请参见：[新建工作组并添加成员](/cn.zh-CN/快速入门/新建工作组并添加成员.md)。
+2.  您已经创建数据模型，具体详见：[设计数据模型](/cn.zh-CN/快速入门/设计数据模型.md)。
 
 新建数据处理节点进行数据的加工处理。
 
@@ -14,83 +13,53 @@
 
 3.  在公共节点区域进行目录新建:
 
-    1.  **![新建目录](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0492067061/p190487.png)** \> **新建目录**
+    1.  单击**![新建目录](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0492067061/p190487.png)** \> **新建目录**
 
     2.  在新增目录页面，输入名称、标识，操作完成后单击**确认**。
 
 4.  选择已创建的公共节点目录，单击**新建公共节点**。
 
-5.  在SQL编译器：
+5.  将节点类型选择为**MaxCompute\_SQL**，单击**确定**。
+
+6.  在SQL编译器中运行脚本生成ods\_base\_yhkh表的数据。
 
     1.  输入SQL语句。
 
         新建节点配置：
 
-        |节点名称和标识|简介|
-        |-------|--|
+        |节点标识|节点名称|
+        |----|----|
         |ods\_base\_yhkh|银行客户信息|
 
         **节点"ods\_base\_yhkh"**SQL语句：
 
         ```
-        create table if not exists ${ods_base_yhkh}(
-        `id` bigint comment '主键',     
-        `zzhm` string comment '证件号码',     
-        `khmc` string comment '客户名称',      
-        `nl` bigint comment '年龄',       
-        `xb` bigint comment '性别 0:男 1:女',       
-        `yddh1` string comment '移动电话1',       
-        `csrq` string comment '出生日期',        
-        `jysp` bigint comment '教育水平 0:研究生 1:本科 2:高中 3:职业高中 4:职业学院',        
-        `career` bigint comment '职业 0:保险 1:教师 2:外企白领 3:自由职业 4:it工程师',        
-        `hyzk` bigint comment '婚姻状况 0:已婚 1:未婚', `gz` bigint comment '工资',        
-        `decdbyjyje` bigint comment '大额存单本月交易金额',        
-        `decdbyjybs` bigint comment '大额存单本月交易笔数',        
-        `zjzdjyrq` string comment '最近主动交易日期',        
-        `jtnsr` bigint comment '家庭年收入',        
-        `dqckcy` bigint comment '定期存款持有' 
-        )        
-        comment '银行客户信息' ;
-        
-        insert overwrite table ${stg_base_yhkh}
-        select
-          t1.id,
-          t1.zzhm,
-          t1.khmc,
-          t1.nl,
-          t1.xb,
-          case t1.xb when '0' then '男' when '1' then '女' end as xb_mc,
-          t1.yddh1,
-          t1.csrq,
-          t1.jysp,
-          case t1.jysp when '0' then '研究生' when '1' then '本科' when '2'
-          then '高中' when '3' then '职业高中' when '4' then '职业学院' end as jysp_mc,
-          t1.career,
-          case t1.career when '0' then '保险' when '1' then '教师' when '2' then '外企白领'
-          when '3' then '自由职业' when '4' then 'IT工程师' end as career_mc,
-          t1.hyzk,
-          case t1.hyzk when '0' then '已婚' when '1' then '未婚' end as hyzk_mc,
-          t1.gz,
-          t1.decdbyjyje,
-          t1.decdbyjybs,
-          t1.zjzdjyrq,
-          t1.jtnsr,
-          t1.dqckcy
-        from
-        ${stg_base_yhkh_di} t1
+        INSERT INTO ods_base_yhkh values
+        (1,'CKR-1000','谢晓敏',19,0,'男','18854326791','2002-03-06',0,'研究生' ,3,'自由职业',1,'未婚' ,80000,95429,31,'2019-05-13',1425574,83489),
+        (2,'CKR-2000','罗大静',32,1,'女','18654326781','1989-11-15',0,'研究生' ,3,'自由职业',0,'已婚' ,40000,54194,34,'2001-10-15',4732362,99694),
+        (3,'CKR-3000','汤一洋',28,1,'女','13854326781','1993-09-04',0,'研究生' ,3,'自由职业',1,'未婚' ,40000,61863,58,'1987-10-06',7593193,11215),
+        (4,'CKR-4000','何三平',22,0,'男','13654326752','1999-07-22',2,'高中' ,3,'自由职业',0,'已婚' ,35000,61082,60,'1989-10-07',9177195,60752),
+        (5,'CKR-5000','文安娜',29,0,'男','13254326781','1992-07-15',1,'本科' ,3,'自由职业',0,'已婚' ,25000,71953,35,'2001-04-04',2925278,4165),
+        (6,'CKR-1005','江二静',40,0,'男','13354326781','1981-03-04',3,'职业高中' ,0,'保险',0,'已婚' ,15000,43857,42,'2014-01-08',5253141,65308),
+        (7,'CKR-1006','汤李丽',36,0,'男','13054326781','1985-10-20',1,'本科' ,3,'自由职业',1,'未婚' ,10000,8503,86,'1970-09-12',5296756,85285),
+        (8,'CKR-1007','江洪军',39,1,'女','13572332123','1982-04-27',0,'研究生' ,4,'IT工程师',0,'已婚' ,27000,65718,86,'1989-05-23',1762593,96453),
+        (9,'CKR-1008','雷秀英',38,0,'男','13054326781','1983-06-23',4,'职业学院',1,'教师',0,'已婚' ,50000,97157,12,'1977-08-16',763445,99478),
+        (10,'CKR-1009','孟马超',23,0,'男','13654326581','1998-07-12',0,'研究生' ,2,'外企白领',1,'未婚' ,15000,68605,54,'2011-10-13',6635322,87174)；
         ```
 
     2.  单击页面右侧**![解析.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5871133261/p282806.png)**，在SQL中自动解析输入或输出。
 
     3.  单击页面右侧**参数变量**，选择数据模型。
 
+        ![选择数据模型.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8513164261/p289273.png)
+
     4.  单击页面右侧**运行属性**，选择测试资源。
 
-    5.  单击左上角**![运行](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9561429061/p205638.png)**查看运行日志。
+    5.  单击左上角**![运行](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9561429061/p205638.png)图标**，运行完成后可以进行日志查询。
 
-    6.  单击左上角**![保存](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8561429061/p205637.png)**图标，确认节点信息，单击**确定**。
+    6.  单击左上角**![保存](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8561429061/p205637.png)图标**，确认节点信息，单击**确定**。
 
-6.  在公共节点目录，查看新建的节点。
+7.  在公共节点目录，查看新建的节点。
 
     ![公共节点.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5871133261/p282830.png)
 
