--- a/cn.zh-CN/快速入门/计算节点运行后的数据探查.md
+++ b/cn.zh-CN/快速入门/计算节点运行后的数据探查.md
@@ -1,10 +1,10 @@
 # 计算节点运行后的数据探查
 
-本章节为您介绍通过处理节点中的SQL编译器运行初始化语句，对相应云计算资源下数据库形成的物理表进行查看。
+本文为您介绍对MaxCompute云计算资源下ods\_base\_yhkh表数据进行查看、确认，为语义建模中创建标签时使用到标准、干净的数据提供了有效保障。
 
 数据节点信息运行完成，具体详见：[添加处理节点](/cn.zh-CN/快速入门/添加处理节点.md)。
 
-支持对初始化语句运行到数据库结果进行查看，保证标签中使用到数据存在并符合标准。
+支持查看数据开发后ods\_base\_yhkh物理表里的数据。
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
@@ -12,10 +12,10 @@
 
 3.  进入物理表探查页面:
 
+    ![查询.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/1329105261/p290187.png)
+
     1.  选中**MaxCompute**下的云计算资源，输入加工后节点输出表表名。
 
-    2.  选中输出表表名，查看物理表数据预览。
-
-        ![查询.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3971133261/p282859.png)
+    2.  选中输出表表名**ods\_base\_yhkh**，查看物理表数据预览。
 
 
