--- a/cn.zh-CN/快速入门/新建标签模型.md
+++ b/cn.zh-CN/快速入门/新建标签模型.md
@@ -1,11 +1,10 @@
 # 新建标签模型
 
-本章节为您介绍创建实体并绑定表。
+本文为您介绍通过在语义建模中创建银行客户实体，并绑定ods\_base\_yhkh表，生成相应的主标签与普通标签，为标签圈群提供了必要条件。
 
 1.  您已经新建工作组，详细请参见[新建工作组并添加成员](/cn.zh-CN/快速入门/新建工作组并添加成员.md)。
 2.  您已经新建计算资源，详细请参见[新建MaxCompute云计算资源](/cn.zh-CN/快速入门/新建MaxCompute云计算资源.md)。
-3.  您已经在Maxcompute数据库插入表[初始化语句](/cn.zh-CN/快速入门/准备工作.md)。
-4.  你已经完成数据处理流程，详细请参见[处理节点的流程](/cn.zh-CN/快速入门/添加处理节点.md)。
+3.  你已经完成数据处理流程，详细请参见[处理节点的流程](/cn.zh-CN/快速入门/添加处理节点.md)。
 
 语义建模主要为您介绍新建标签模型，为之后的标签圈群做支撑。
 
