--- a/cn.zh-CN/快速入门/标签圈群.md
+++ b/cn.zh-CN/快速入门/标签圈群.md
@@ -1,6 +1,6 @@
 # 标签圈群
 
-本章节为您介绍标签圈群。
+本文为您介绍通过在画像分析中基于对年龄、工资、婚姻状况-标准值说明这三个标签进行圈群分析，生成高潜办卡客户群体，通过对群体的分析利用，有效的帮助客户进行营销模式的数字化转型。
 
 您已经创建标签，详细参见：[新建标签模型](/cn.zh-CN/快速入门/新建标签模型.md)。
 
@@ -43,7 +43,7 @@
         |----|----|
         |高潜办卡客户|demo|
 
-        ![群体列表](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2377900161/p205959.png)
+        ![发布群体.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9957684261/p289332.png)
 
     -   单击**圈选分析**，选择度量方式和多个维度，单击**开始分析**，查看分析图表，单击**下载报表**，弹出**请选择下载图表**页面，选择导出类型和勾选图表，单击**确定**，查看下载的图表。
 
@@ -52,6 +52,6 @@
         |度量|群体数量|
         |维度|年龄、家庭年收入|
 
-        ![分析结果查看](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2377900161/p205958.png)
+        ![群体分析.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0067684261/p289334.png)
 
 
