--- a/cn.zh-CN/常见问题/数据建模.md
+++ b/cn.zh-CN/常见问题/数据建模.md
@@ -12,7 +12,7 @@ keyword: [数据建模, 逻辑表, 数据模型, 质量规则]
 
 ## 逻辑表质量规则都支持哪些云计算资源？
 
-目前包含Maxcompute、Hive。
+目前包含Maxcompute、Hive、RDS、PG。
 
 ## 逻辑表质量规则都包含哪些？
 
