--- a/cn.zh-CN/用户指南/数据开发/测试场景/新建测试场景.md
+++ b/cn.zh-CN/用户指南/数据开发/测试场景/新建测试场景.md
@@ -2,7 +2,7 @@
 
 您可在测试环境中创建场景，通过在场景中搭建节点流程并部署运行，将杂乱的原始数据转换成业务人员可理解的数据，并验证数据处理优化后的可用性。
 
--   您已经添加节点，详见[添加 MaxCompute 类型的节点]()。
+-   您已经添加节点，详见[添加节点](/cn.zh-CN/用户指南/数据开发/公共节点/添加节点.md)。
 -   您已添加相关的云计算资源。
 
 节点流程定义了一段处理逻辑，通过有向无环图 DAG（Directed Acyclic Graph）描述。节点流程中所有节点的输入、输出数据都是具体的数据表/文件/数据流，以下以MaxCompute节点搭建流程为例：
@@ -17,9 +17,9 @@
 
 4.  在页面右侧，单击**新建测试场景**。
 
-5.  弹出**创建测试场景**页面，填写场景名称和code，单击**确认**，进入场景编排页面。
+5.  在**创建测试场景**页面，填写场景名称和code，单击**确认**，进入场景编排页面。
 
-    ![新建场景.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8632070261/p272402.png)
+    ![新建场景.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5237244261/p272402.png)
 
     |区域|说明|
     |--|--|
@@ -57,11 +57,11 @@
 
     3.  把左侧“MaxCompute”算法下拖入新建的节点到画布，并进行连线，连线过程中设置上下游节点连接详情，出的输出code-数据类型和入的输入code-数据类型一致连线如下图：
 
-        ![连线](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8857900161/p208831.png)
+        ![连线](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5237244261/p208831.png)
 
-        ![连线效果](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8857900161/p208828.png)
+        ![连线效果](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5237244261/p208828.png)
 
-    4.  单击画布上添加的自定义数据节点，单击页面右侧**节点属性**，选择节点版本为**正式版**，单击**参数变量**，单击节点输出下的**![修改输出](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9857900161/p208482.png)**，勾选**修改输出**，选择测试资源，输入输出表名，单击**线上资源**，填写输入输出表名，单击**返回**。单击页面**运行属性**，选择测试和线上云计算资源、并单击**![开启](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8207060161/p209503.png)**可设置定时调度。
+    4.  单击画布上添加的自定义数据节点，单击页面右侧**节点属性**，选择节点版本为已发布的版本，单击**参数变量**，单击节点输出下的**![修改输出](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9857900161/p208482.png)**，在**修改输出**对话框中，选择云计算资源，填写输出表名，单击**线上资源**，填写输出表名，单击**返回**。单击页面**运行属性**，选择测试和线上云计算资源、并单击**![开启](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8207060161/p209503.png)**可设置定时调度。
 
         公共节点配置：
 
@@ -69,6 +69,7 @@
         |---|--|
         |测试/线上云计算资源|根据客户定义选择，测试和线上场景不能相同。|
         |测试/线上配置输出表名|数据的输出表。|
+        |高级设置|可设置当前公共节点的测试资源组和高级资源组。|
         |定时调度|定时调度只在线上场景生效。包含以下配置        -   依赖本节点上一周期调度：可勾选。
         -   生成实例方式：T+1次日生成和发布后即时生成。
         -   生效日期：自定义。
