--- a/cn.zh-CN/用户指南/数据开发/测试场景/查看测试场景.md
+++ b/cn.zh-CN/用户指南/数据开发/测试场景/查看测试场景.md
@@ -2,7 +2,7 @@
 
 在测试环境中，您可查看所有测试场景的相关信息，包括场景上线状态、场景名称、场景code、场景描述、创建人、创建时间、修改人和修改时间。
 
-已新建了测试场景，详情请参见[新建测试场景]()。
+已新建了测试场景，详情请参见[新建测试场景](/cn.zh-CN/用户指南/数据开发/测试场景/新建测试场景.md)。
 
 在测试环境中，您可查看所有测试场景的上线状态，以便您随时了解各场景的上线情况。同时，您还可以通过场景的上线状态来筛选场景。在测试环境中，场景的上线状态包括以下三种：
 
@@ -23,9 +23,5 @@
     2.  单击**确定**，则可筛选出指定状态的场景。
 
         **说明：** 如果场景列表处于筛选状态，则**![筛选](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0398133261/p282516.png)筛选**图标是高亮的。
-
-5.  如果需要查看某个测试场景的创建人、创建时间、修改人和修改时间，将鼠标指向该测试场景后面的**![查看](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6353117951/p51311.png)**图标。
-
-    **说明：** 如果测试场景未被修改过，则创建人和修改人相同，创建时间和修改时间相同。
 
 
