--- a/cn.zh-CN/用户指南/数据建模/数据模型管理.md
+++ b/cn.zh-CN/用户指南/数据建模/数据模型管理.md
@@ -35,7 +35,7 @@
 
         标识字段是数据库识别该模型的唯一的值，不可以修改。
 
-        当需要修改数据模型名称或者描述时，根据编辑模型操作 。
+        当需要修改数据模型名称或者描述时，可以编辑模型。
 
         ![新建模型](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7155043261/p283161.png)
         
