--- a/cn.zh-CN/用户指南/数据开发/测试场景/系统节点配置说明/数据传输节点.md
+++ b/cn.zh-CN/用户指南/数据开发/测试场景/系统节点配置说明/数据传输节点.md
@@ -9,8 +9,9 @@
 |**节点属性**|**Node Code**|节点的唯一标识，同一场景中不可重复。|
 |**Node Name**|节点的名称。|
 |**配置数据同步关系**|设置源表列和目标表列的同步字段。|
-|**参数变量**|**输入code**|节点的输入code|
+|**参数变量**|**输入code**|节点的输入code。|
 |**云计算资源类型**|支持MaxCompute、MongoDB、Hive、ApsaraDB for RDS。-   支持MaxCompute传输到ApsaraDB for RDS
+-   支持ApsaraDB for RDS传输到MaxCompute
 -   支持MongoDB传输到MaxCompute
 -   支持MaxCompute传输到Elasticsearch
 -   支持Hive传输到MaxCompute
@@ -18,8 +19,8 @@
 -   支持Hive传输到Hbase
 -   支持Hive传输到Phoenix |
 |**数据模型**|保证**输入数据模型**与上游节点的**输出数据模型**相同。|
-|**输出code**|节点的输入code|
-|**云计算资源类型**|支持MaxCompute、ApsaraDB for RDS、Hbase、Phoenix|
+|**输出code**|节点的输入code。|
+|**云计算资源类型**|支持MaxCompute、ApsaraDB for RDS、Hbase、Phoenix。|
 |**数据模型**|保证**输出数据模型**与下游节点的**输入数据模型**相同。|
 |**运行属性**|**定时调度**|定时调度只在线上场景生效。包含以下配置-   依赖本节点上一周期调度：可勾选。
 -   生成实例方式：T+1次日生成和发布后即时生成。
